--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-6 w3-banner-grid-left">
 				<div class="w3-banner-img">
 					<img src="images/ban661.jpg" alt="img">
-					<h3 class="test">Chris Adam</h3>
+					<h3 class="test">Arif Rahman Fauzi</h3>
 					<p class="test" >Graphic designer</p>
 				</div>
 			</div>
