--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="w3-banner-img">
 					<img src="images/ban661.jpg" alt="img">
 					<h3 class="test">Arif Rahman Fauzi</h3>
-					<p class="test" >Graphic designer</p>
+					<p class="test" >Web Programmer</p>
 				</div>
 			</div>
 			<div class="col-md-6 w3-banner-grid-right">
