merubah top bar

--- a/index.html
+++ b/index.html
@@ -50,34 +50,34 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="w3-banner-grids">
 			<div class="col-md-6 w3-banner-grid-left">
 				<div class="w3-banner-img">
-					<img src="images/ban661.jpg" alt="img">
+					<img src="images/profil.jpg" alt="img">
 					<h3 class="test">Arif Rahman Fauzi</h3>
-					<p class="test" >Web Programmer</p>
+					<p class="test" >Back End Developer</p>
 				</div>
 			</div>
 			<div class="col-md-6 w3-banner-grid-right">
 			<div class="w3-banner-text">
-				<h3>Career Goal</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dignissim velit sed nibh placerat, non aliquam purus pretium. Donec at justo dignissim, maximus elit et, vestibulum mi.</p>
+				<h3>Perjalanan Hidup</h3>
+				<p>Lahir di Kota Surabaya, sebagai anak pertamana dari 3 bersaudara. Saat SMP mengikuti berbagai kegiatan ekstrakulikuler diantaranya pencak silat, volly. Pertama kali terjun di dunia Programming sejak kelas 2 SMP, pada awalnya otodidak belajar tentang HTML dan kawan-kawanya dari situ saya belajar membuat sebuah Blog pertama kali. Saat SMK saya mengambil jurusan TKJ (Teknik Komputer Jaringan) dari situ saya belajar dunia IT lebih dalam mulai dari, konfigurasi server, apache, debian, dan berbagai kebutuhan jaringan lainnya. Dan saat ini saya kuliah di UINSA tepatnya jurusan Sistem Informasi, tau sendiri lah ngapain :D &#128513;</p>
 			</div>
 				<div class=" w3-right-addres-1">
 				<ul class="address">
 								<li>
 									<ul class="agileits-address-text ">
-										<li class="agile-it-adress-left"><b>D.O.B</b></li>
-										<li><span>:</span>21-08-1987</li>
+										<li class="agile-it-adress-left"><b>Tanggal Lahir</b></li>
+										<li><span>:</span>30-08-1997</li>
 									</ul>
 								</li>
 								<li>
 									<ul class="agileits-address-text">
-										<li class="agile-it-adress-left"><b>PHONE</b></li>
-										<li><span>:</span>(+000) 003 003 0052</li>
+										<li class="agile-it-adress-left"><b>Telp</b></li>
+										<li><span>:</span>(+62) 878 513 94078</li>
 									</ul>
 								</li>
 								<li>
 									<ul class="agileits-address-text">
-										<li class="agile-it-adress-left"><b>ADDRESS</b></li>
-										<li><span>:</span>3030 New York, NY, USA</li>
+										<li class="agile-it-adress-left"><b>Alamat</b></li>
+										<li><span>:</span>Perum Griyo Taman Asri, Taman, Sidoarjo</li>
 									</ul>
 								</li>
 								<li>
