--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-6 w3-banner-grid-right">
 			<div class="w3-banner-text">
 				<h3>Perjalanan Hidup</h3>
-				<p>Lahir di Kota Surabaya, sebagai anak pertamana dari 3 bersaudara. Saat SMP mengikuti berbagai kegiatan ekstrakulikuler diantaranya pencak silat, volly. Pertama kali terjun di dunia Programming sejak kelas 2 SMP, pada awalnya otodidak belajar tentang HTML dan kawan-kawanya dari situ saya belajar membuat sebuah Blog pertama kali. Saat SMK saya mengambil jurusan TKJ (Teknik Komputer Jaringan) dari situ saya belajar dunia IT lebih dalam mulai dari, konfigurasi server, apache, debian, dan berbagai kebutuhan jaringan lainnya. Dan saat ini saya kuliah di UINSA tepatnya jurusan Sistem Informasi, tau sendiri lah ngapain :D &#128513;</p>
+				<p>Lahir di Kota Surabaya, sebagai anak pertama dari 3 bersaudara. Saat SMP mengikuti berbagai kegiatan ekstrakulikuler diantaranya pencak silat, volly. Pertama kali terjun di dunia Programming sejak kelas 2 SMP, pada awalnya otodidak belajar tentang HTML dan kawan-kawanya dari situ saya belajar membuat sebuah Blog pertama kali. Saat SMK saya mengambil jurusan TKJ (Teknik Komputer Jaringan) dari situ saya belajar dunia IT lebih dalam mulai dari, konfigurasi server, apache, debian, dan berbagai kebutuhan jaringan lainnya. Dan saat ini saya kuliah di UINSA tepatnya jurusan Sistem Informasi, tau sendiri lah ngapain :D &#128513;</p>
 			</div>
 				<div class=" w3-right-addres-1">
 				<ul class="address">
